syntax = "proto3";

package myservice;


option go_package = "github.com/eunsoni/go-grpc-mgm-crud/my-go-grpc-service/api/proto;proto";
service MyService {
    rpc GetItem (GetItemRequest) returns (GetItemResponse);
    rpc CreateItem (CreateItemRequest) returns (CreateItemResponse);
}

message GetItemRequest {
    string id = 1;
}

message GetItemResponse {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateItemRequest {
    string name = 1;
    string description = 2;
}

message CreateItemResponse {
    string id = 1;
    string name = 2;
    string description = 3;
}